# xeropathgen2

./: .gitignore  CMakeLists.txt  install_linux.sh  xeropath2.desktop  xeropathgen2.sln
XeroPathGen/: AboutDialog.cpp  AboutDialog.h  BasePlotWindow.cpp  BasePlotWindow.h  CSVWriter.h  CentripetalConstraint.cpp  CentripetalConstraint.h  Changes.txt  CheesyGenerator.cpp  CheesyGenerator.h  ConstraintEditorWindow.cpp  ConstraintEditorWindow.h  DistanceVelocityConstraint.cpp  DistanceVelocityConstraint.h  DistanceView.cpp  DistanceView.h  DriveBaseData.cpp  DriveBaseData.h  EditableProperty.h  GameField.h  GameFieldManager.cpp  GameFieldManager.h  GenerationMgr.cpp  GenerationMgr.h  Generator.cpp  Generator.h  GeneratorBase.cpp  GeneratorBase.h  GeneratorType.h  ICsv.h  Logger.cpp  Logger.h  LoggerWindow.cpp  LoggerWindow.h  ManagerBase.cpp  ManagerBase.h  MathUtils.cpp  MathUtils.h  MinMaxAcceleration.h  NoEditDelegate.h  (+119 more)
fields/: fields.json
installer/: xeropath.iss
